--- a/cn/faq/chat-completions.mdx
+++ b/cn/faq/chat-completions.mdx
@@ -7,7 +7,7 @@ description: '关于 v1/chat/completions 接口的常见问题解答'
 
 ### 与 OpenAI 的兼容程度如何？
 
-Nebula Lab 的对话接口完全兼容 OpenAI Chat Completions API 格式，您可以直接使用 OpenAI SDK 或兼容的客户端调用。少数扩展字段可能因模型而异，以具体模型支持为准。
+Nebula Api 的对话接口完全兼容 OpenAI Chat Completions API 格式，您可以直接使用 OpenAI SDK 或兼容的客户端调用。少数扩展字段可能因模型而异，以具体模型支持为准。
 
 ### 如何选择合适的模型？
 
