--- a/cn/faq/data-security.mdx
+++ b/cn/faq/data-security.mdx
@@ -1,11 +1,11 @@
 ---
 title: '如何保障数据安全？'
-description: 'Nebula Lab 数据安全保护措施详解，包括加密传输、最小化存储和访问控制机制'
+description: 'Nebula Api 数据安全保护措施详解，包括加密传输、最小化存储和访问控制机制'
 ---
 
 ## 数据安全承诺
 
-Nebula Lab 高度重视用户数据安全，采取了多重措施保护您的信息。我们致力于为用户提供安全、可靠的 AI 中转服务。
+Nebula Api 高度重视用户数据安全，采取了多重措施保护您的信息。我们致力于为用户提供安全、可靠的 AI 中转服务。
 
 ## 核心安全措施
 
@@ -22,7 +22,7 @@ Nebula Lab 高度重视用户数据安全，采取了多重措施保护您的信
 
 **中转平台定位**
 
-Nebula Lab 作为中转平台的核心优势：
+Nebula Api 作为中转平台的核心优势：
 - **不存储请求内容**：不会保存您的 API 请求内容（输入和输出）
 - **不查看用户数据**：技术团队无法查看具体的对话内容
 - **即转即删**：请求处理完成后，内容数据立即清除
@@ -86,7 +86,7 @@ Nebula Lab 作为中转平台的核心优势：
 
 **持续安全改进**
 
-Nebula Lab 团队定期进行全面的安全评估：
+Nebula Api 团队定期进行全面的安全评估：
 - **系统漏洞扫描**：定期检查系统安全漏洞
 - **代码安全审查**：审核代码中的潜在安全风险
 - **基础设施检查**：评估服务器和网络安全
