--- a/cn/faq/network-proxy.mdx
+++ b/cn/faq/network-proxy.mdx
@@ -1,11 +1,11 @@
 ---
 title: '使用 API 接口需要代理网络吗？'
-description: '了解 Nebula Lab 的网络访问方式，是否需要使用代理或 VPN'
+description: '了解 Nebula Api 的网络访问方式，是否需要使用代理或 VPN'
 ---
 
 ## 简短回答
 
-**不需要代理，可以直连。** Nebula Lab 支持国内直接访问，无需任何代理或 VPN。
+**不需要代理，可以直连。** Nebula Api 支持国内直接访问，无需任何代理或 VPN。
 
 ## 网络访问说明
 
@@ -19,7 +19,7 @@ description: '了解 Nebula Lab 的网络访问方式，是否需要使用代理
 
 ### 海外用户
 
-如果您在海外使用 Nebula Lab：
+如果您在海外使用 Nebula Api：
 - 🚀 访问速度更快
 - 🌐 直连国际线路
 - ⚡ 无需额外配置
