--- a/cn/integrations/cursor.mdx
+++ b/cn/integrations/cursor.mdx
@@ -5,7 +5,7 @@ description: 'Cursor 代码编辑器集成指南'
 
 ## 一、产品简介
 
-Cursor 是一款 AI 驱动的代码编辑器，通过集成 **Nebula Lab**，可在编写代码时获得强大的 AI 辅助功能，支持智能代码生成、补全、解释及优化。
+Cursor 是一款 AI 驱动的代码编辑器，通过集成 **Nebula Api**，可在编写代码时获得强大的 AI 辅助功能，支持智能代码生成、补全、解释及优化。
 
 ## 二、快速配置步骤
 
@@ -15,7 +15,7 @@ Cursor 是一款 AI 驱动的代码编辑器，通过集成 **Nebula Lab**，可
 
 ### 2. 配置 API
 
-- **OpenAI API Key**：输入您的 Nebula Lab 密钥
+- **OpenAI API Key**：输入您的 Nebula Api 密钥
 - **Override OpenAI Base URL**：勾选并输入 `https://llm.ai-nebula.com/v1`
 - 点击 **Verify** 验证配置
 
