--- a/cn/integrations/immersive-translate.mdx
+++ b/cn/integrations/immersive-translate.mdx
@@ -5,7 +5,7 @@ description: '沉浸式翻译浏览器扩展集成指南'
 
 ## 一、简介
 
-沉浸式翻译是一款优秀的浏览器翻译扩展，支持网页双语对照阅读。通过集成 **Nebula Lab**，可调用强大的 AI 模型，获得更准确、自然的翻译效果。
+沉浸式翻译是一款优秀的浏览器翻译扩展，支持网页双语对照阅读。通过集成 **Nebula Api**，可调用强大的 AI 模型，获得更准确、自然的翻译效果。
 
 ## 二、快速安装
 
@@ -22,12 +22,12 @@ description: '沉浸式翻译浏览器扩展集成指南'
 3. 点击"安装"并添加到浏览器工具栏
 4. 或访问 [沉浸式翻译官网](https://immersivetranslate.com)
 
-## 三、配置 Nebula Lab
+## 三、配置 Nebula Api
 
 1. **打开设置**：点击浏览器工具栏的扩展图标，选择"设置"
 2. **选择翻译服务**：在左侧菜单点击"翻译服务"，找到"OpenAI"
 3. **填写配置**：
-   - **APIKEY**：您的 Nebula Lab 密钥
+   - **APIKEY**：您的 Nebula Api 密钥
    - **自定义 API 接口地址**：`https://llm.ai-nebula.com/v1/chat/completions`
    - **自定义模型**：可选填（如 `gpt-3.5-turbo`）
 
@@ -227,7 +227,7 @@ description: '沉浸式翻译浏览器扩展集成指南'
   </Accordion>
   <Accordion title="翻译结果不显示">
     - 确认网页内容是否支持翻译
-    - 检查 Nebula Lab 配置
+    - 检查 Nebula Api 配置
     - 关闭广告拦截器
     - 切换其他翻译服务
   </Accordion>
