--- a/cn/quickstart.mdx
+++ b/cn/quickstart.mdx
@@ -1,13 +1,13 @@
 ---
 title: '快速开始'
-description: '只需简单三步，即可开始使用 Nebula Lab 访问各种 AI 模型'
+description: '只需简单三步，即可开始使用 Nebula Api 访问各种 AI 模型'
 ---
 
 ## 第一步：账户准备
 
 ### 1.1 注册账号
 
-访问 [Nebula Lab 官网](https://ai-nebula.com) 注册账号：
+访问 [Nebula Api 官网](https://ai-nebula.com) 注册账号：
 - 使用邮箱注册
 - 验证邮箱地址
 - 登录控制台
@@ -121,14 +121,14 @@ curl https://llm.ai-nebula.com/v1/chat/completions \
 
 ## 下一步
 
-恭喜！您已经成功完成了 Nebula Lab 的接入。接下来您可以：
+恭喜！您已经成功完成了 Nebula Api 的接入。接下来您可以：
 
 <Columns cols={2}>
   <Card title="查看 API 文档" icon="book" href="/cn/api-reference/introduction">
     了解完整的 API 接口说明
   </Card>
   <Card title="集成到应用" icon="puzzle-piece" href="/cn/integrations/cursor">
-    将 Nebula Lab 集成到各种工具
+    将 Nebula Api 集成到各种工具
   </Card>
 </Columns>
 
@@ -146,7 +146,7 @@ curl https://llm.ai-nebula.com/v1/chat/completions \
     ```
   </Accordion>
   <Accordion title="支持哪些编程语言？">
-    Nebula Lab 兼容 OpenAI API 标准，支持所有 OpenAI SDK 支持的语言：
+    Nebula Api 兼容 OpenAI API 标准，支持所有 OpenAI SDK 支持的语言：
     - Python
     - JavaScript/TypeScript
     - Java
