--- a/en/api-reference/models.mdx
+++ b/en/api-reference/models.mdx
@@ -5,7 +5,7 @@ description: 'View 200+ supported AI models with detailed information and recomm
 
 ## Model Recommendations
 
-Nebula Lab supports 200+ mainstream AI models. This page provides detailed model information, pricing, and usage instructions.
+Nebula Api supports 200+ mainstream AI models. This page provides detailed model information, pricing, and usage instructions.
 
 <Note>
 Enterprise-grade AI model API gateway. Aggregating excellent large models. No rate limits, no expiration, pay-as-you-go, reliable long-term service.
@@ -13,7 +13,7 @@ Enterprise-grade AI model API gateway. Aggregating excellent large models. No ra
 
 ## 🔥 Currently Recommended Models
 
-Below are the currently stable and popular models. For the complete model list and real-time pricing, visit [Nebula Lab Console](https://ai-nebula.com).
+Below are the currently stable and popular models. For the complete model list and real-time pricing, visit [Nebula Api Console](https://ai-nebula.com).
 
 ## Model Categories
 
