--- a/en/api-reference/openai-sdk.mdx
+++ b/en/api-reference/openai-sdk.mdx
@@ -1,11 +1,11 @@
 ---
 title: 'OpenAI SDK Usage'
-description: 'Seamlessly integrate Nebula Lab using official OpenAI SDKs'
+description: 'Seamlessly integrate Nebula Api using official OpenAI SDKs'
 ---
 
 ## Using Official OpenAI Libraries
 
-Nebula Lab is fully compatible with OpenAI API format. You can use official OpenAI SDKs with just a simple configuration change.
+Nebula Api is fully compatible with OpenAI API format. You can use official OpenAI SDKs with just a simple configuration change.
 
 ## Supported SDKs
 
@@ -359,7 +359,7 @@ except APIError as e:
 # Original config
 client = OpenAI(api_key="sk-...")
 
-# Change to Nebula Lab
+# Change to Nebula Api
 client = OpenAI(
     api_key="YOUR_NEBULA_KEY", 
     base_url="https://llm.ai-nebula.com/v1"
