--- a/en/changelog.mdx
+++ b/en/changelog.mdx
@@ -1,9 +1,9 @@
 ---
 title: 'Changelog 🔥'
-description: 'Nebula Lab latest updates, model releases, and pricing changes'
+description: 'Nebula Api latest updates, model releases, and pricing changes'
 ---
 
-Welcome to Nebula Lab changelog. Here you can find our latest model releases, pricing updates, and feature announcements.
+Welcome to Nebula Api changelog. Here you can find our latest model releases, pricing updates, and feature announcements.
 
 <Tip>
 **Bookmark**: Press Ctrl+D to bookmark this page and stay updated!
