--- a/en/contact.mdx
+++ b/en/contact.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Contact Us'
-description: 'Get Nebula Lab technical support and business inquiries'
+description: 'Get Nebula Api technical support and business inquiries'
 ---
 
 ## Technical Support
