--- a/en/faq/content-safety.mdx
+++ b/en/faq/content-safety.mdx
@@ -1,11 +1,11 @@
 ---
 title: 'Content Safety & Compliance'
-description: 'Nebula Lab content safety and compliance policy, including content moderation and violation handling'
+description: 'Nebula Api content safety and compliance policy, including content moderation and violation handling'
 ---
 
 ## Content Safety Framework
 
-Nebula Lab is committed to providing safe, compliant AI services with multi-layered security measures.
+Nebula Api is committed to providing safe, compliant AI services with multi-layered security measures.
 
 ## Content Moderation
 
@@ -51,7 +51,7 @@ The following content types are strictly prohibited:
 
 ### Consequences
 
-Nebula Lab reserves the right to take action against violations:
+Nebula Api reserves the right to take action against violations:
 
 <Tabs>
   <Tab title="Minor Violations">
