--- a/en/faq/data-security.mdx
+++ b/en/faq/data-security.mdx
@@ -1,11 +1,11 @@
 ---
 title: 'How do we protect data security?'
-description: 'Nebula Lab data security measures including encryption, minimal storage, and access control'
+description: 'Nebula Api data security measures including encryption, minimal storage, and access control'
 ---
 
 ## Data Security Commitment
 
-Nebula Lab takes user data security seriously with multiple protection measures. We're committed to providing secure, reliable AI services.
+Nebula Api takes user data security seriously with multiple protection measures. We're committed to providing secure, reliable AI services.
 
 ## Core Security Measures
 
@@ -22,7 +22,7 @@ Nebula Lab takes user data security seriously with multiple protection measures.
 
 **Relay Platform Advantage**
 
-As a relay platform, Nebula Lab:
+As a relay platform, Nebula Api:
 - **Doesn't store request content**: No saving of API request inputs/outputs
 - **Can't view user data**: Technical team cannot access conversation content
 - **Immediate deletion**: Content cleared after processing
@@ -86,7 +86,7 @@ We only log essential information for billing and troubleshooting:
 
 **Continuous Improvement**
 
-Nebula Lab conducts regular security assessments:
+Nebula Api conducts regular security assessments:
 - **Vulnerability scanning**: Regular system security checks
 - **Code review**: Review potential security risks in code
 - **Infrastructure checks**: Server and network security evaluation
