--- a/en/faq/network-proxy.mdx
+++ b/en/faq/network-proxy.mdx
@@ -1,11 +1,11 @@
 ---
 title: 'Do I need a proxy to use the API?'
-description: 'Learn about Nebula Lab network access and whether you need a proxy or VPN'
+description: 'Learn about Nebula Api network access and whether you need a proxy or VPN'
 ---
 
 ## Short Answer
 
-**No proxy needed, direct connection works.** Nebula Lab supports direct access from China without any proxy or VPN.
+**No proxy needed, direct connection works.** Nebula Api supports direct access from China without any proxy or VPN.
 
 ## Network Access
 
@@ -19,7 +19,7 @@ description: 'Learn about Nebula Lab network access and whether you need a proxy
 
 ### International Users
 
-If you're using Nebula Lab from overseas:
+If you're using Nebula Api from overseas:
 - 🚀 Faster access speeds
 - 🌐 Direct international routing
 - ⚡ No additional configuration needed
