--- a/en/index.mdx
+++ b/en/index.mdx
@@ -1,11 +1,11 @@
 ---
-title: "Nebula Lab - Enterprise AI Model API Gateway"
+title: "Nebula Api - Enterprise AI Model API Gateway"
 description: "Enterprise-grade AI model API gateway supporting 200+ popular AI models"
 ---
 
-## Welcome to Nebula Lab
+## Welcome to Nebula Api
 
-**Nebula Lab** is an enterprise-grade AI model API gateway based on the unified OpenAI API standard, supporting 200+ popular AI models. One token to access OpenAI, Claude, Gemini, DeepSeek, Qwen, Kimi, GLM and all mainstream large language models.
+**Nebula Api** is an enterprise-grade AI model API gateway based on the unified OpenAI API standard, supporting 200+ popular AI models. One token to access OpenAI, Claude, Gemini, DeepSeek, Qwen, Kimi, GLM and all mainstream large language models.
 
 ## 📖 Getting Started
 
@@ -73,7 +73,7 @@ description: "Enterprise-grade AI model API gateway supporting 200+ popular AI m
   </Card>
 </Columns>
 
-## 🚀 Why Nebula Lab?
+## 🚀 Why Nebula Api?
 
 ### One API, Multiple Models
 
@@ -125,7 +125,7 @@ response = client.chat.completions.create(
 
 <Steps>
   <Step title="Register">
-    Visit [Nebula Lab](https://ai-nebula.com) to create your account
+    Visit [Nebula Api](https://ai-nebula.com) to create your account
   </Step>
   <Step title="Get API Key">
     Generate your API key in the console
