--- a/en/integrations/cherry-studio.mdx
+++ b/en/integrations/cherry-studio.mdx
@@ -5,13 +5,13 @@ description: 'Cherry Studio Client Integration Guide'
 
 ## Introduction
 
-Cherry Studio is a powerful AI chat client that supports multiple large language models. With **Nebula Lab**, you can easily use various mainstream AI models in Cherry Studio.
+Cherry Studio is a powerful AI chat client that supports multiple large language models. With **Nebula Api**, you can easily use various mainstream AI models in Cherry Studio.
 
 ## Quick Integration
 
 ### 1. Get API Key
 
-Visit [Nebula Lab](https://ai-nebula.com) to get your API key.
+Visit [Nebula Api](https://ai-nebula.com) to get your API key.
 
 ### 2. Configuration
 
@@ -20,7 +20,7 @@ Visit [Nebula Lab](https://ai-nebula.com) to get your API key.
 3. Select "Model Service"
 4. Fill in:
    - API URL: `https://llm.ai-nebula.com`
-   - API Key: Your key from Nebula Lab console
+   - API Key: Your key from Nebula Api console
 5. Click "➕ Add" to save
 
 <Warning>
@@ -92,5 +92,5 @@ Cherry Studio supports streaming output by default for smoother conversations.
 
 1. **Choose wisely**: Match models to task requirements
 2. **Stay updated**: Follow new model releases
-3. **Monitor usage**: Check usage via Nebula Lab console
+3. **Monitor usage**: Check usage via Nebula Api console
 
