--- a/en/integrations/cursor.mdx
+++ b/en/integrations/cursor.mdx
@@ -5,7 +5,7 @@ description: 'Cursor Code Editor Integration Guide'
 
 ## Introduction
 
-Cursor is an AI-powered code editor. By integrating with **Nebula Lab**, you can get powerful AI assistance for code generation, completion, explanation, and optimization.
+Cursor is an AI-powered code editor. By integrating with **Nebula Api**, you can get powerful AI assistance for code generation, completion, explanation, and optimization.
 
 ## Quick Setup
 
@@ -15,7 +15,7 @@ Click the gear icon ⚙️ in the top right, select **Models**.
 
 ### 2. Configure API
 
-- **OpenAI API Key**: Enter your Nebula Lab key
+- **OpenAI API Key**: Enter your Nebula Api key
 - **Override OpenAI Base URL**: Check and enter `https://llm.ai-nebula.com/v1`
 - Click **Verify** to validate
 
