--- a/en/integrations/immersive-translate.mdx
+++ b/en/integrations/immersive-translate.mdx
@@ -5,7 +5,7 @@ description: 'Immersive Translate Browser Extension Integration Guide'
 
 ## Introduction
 
-Immersive Translate is an excellent browser translation extension supporting bilingual webpage reading. By integrating with **Nebula Lab**, you can leverage powerful AI models for more accurate translations.
+Immersive Translate is an excellent browser translation extension supporting bilingual webpage reading. By integrating with **Nebula Api**, you can leverage powerful AI models for more accurate translations.
 
 ## Quick Install
 
@@ -22,12 +22,12 @@ Immersive Translate is an excellent browser translation extension supporting bil
 3. Click "Install" and add to toolbar
 4. Or visit [Immersive Translate](https://immersivetranslate.com)
 
-## Configure Nebula Lab
+## Configure Nebula Api
 
 1. **Open Settings**: Click extension icon, select "Settings"
 2. **Select Service**: Click "Translation Service", find "OpenAI"
 3. **Fill Config**:
-   - **APIKEY**: Your Nebula Lab key
+   - **APIKEY**: Your Nebula Api key
    - **Custom API URL**: `https://llm.ai-nebula.com/v1/chat/completions`
    - **Custom Model**: Optional (e.g. `gpt-3.5-turbo`)
 
