--- a/en/quickstart.mdx
+++ b/en/quickstart.mdx
@@ -1,13 +1,13 @@
 ---
 title: 'Quick Start'
-description: 'Get started with Nebula Lab in just three simple steps'
+description: 'Get started with Nebula Api in just three simple steps'
 ---
 
 ## Step 1: Account Setup
 
 ### 1.1 Register
 
-Visit [Nebula Lab](https://ai-nebula.com) to register:
+Visit [Nebula Api](https://ai-nebula.com) to register:
 - Sign up with email
 - Verify your email address
 - Log in to the console
@@ -121,14 +121,14 @@ curl https://llm.ai-nebula.com/v1/chat/completions \
 
 ## Next Steps
 
-Congratulations! You've successfully set up Nebula Lab. Next you can:
+Congratulations! You've successfully set up Nebula Api. Next you can:
 
 <Columns cols={2}>
   <Card title="View API Docs" icon="book" href="/en/api-reference/introduction">
     Learn about complete API specifications
   </Card>
   <Card title="Integrate with Apps" icon="puzzle-piece" href="/en/integrations/cursor">
-    Integrate Nebula Lab with various tools
+    Integrate Nebula Api with various tools
   </Card>
 </Columns>
 
@@ -146,7 +146,7 @@ Congratulations! You've successfully set up Nebula Lab. Next you can:
     ```
   </Accordion>
   <Accordion title="Which programming languages are supported?">
-    Nebula Lab is OpenAI API compatible, supporting all OpenAI SDK languages:
+    Nebula Api is OpenAI API compatible, supporting all OpenAI SDK languages:
     - Python
     - JavaScript/TypeScript
     - Java
