--- a/cn/changelog.mdx
+++ b/cn/changelog.mdx
@@ -1,9 +1,9 @@
 ---
 title: '网站公告 🔥'
-description: 'Nebula Lab 最新动态、模型更新、价格调整等重要公告'
+description: 'Nebula Api 最新动态、模型更新、价格调整等重要公告'
 ---
 
-欢迎来到 Nebula Lab 的更新日志页面。在这里，您可以了解到我们的最新模型上线、价格调整、功能更新等重要信息。
+欢迎来到 Nebula Api 的更新日志页面。在这里，您可以了解到我们的最新模型上线、价格调整、功能更新等重要信息。
 
 <Tip>
 **收藏更新**：Ctrl+D 收藏本网页，第一时间获取模型上新和优惠信息！
