--- a/cn/index.mdx
+++ b/cn/index.mdx
@@ -3,9 +3,9 @@ title: "基本介绍"
 description: "企业级专业稳定的AI大模型API中转站，支持200+热门AI模型"
 ---
 
-## 欢迎使用 Nebula Lab
+## 欢迎使用 Nebula Api
 
-**Nebula Lab** 是企业级专业稳定的 AI 大模型 API 中转站，基于统一的 OpenAI API 标准，支持 200+ 热门 AI 模型。一个令牌，即可轻松调用 OpenAI、Claude、Gemini、DeepSeek、Qwen、Kimi、GLM 等所有主流大模型。
+**Nebula Api** 是企业级专业稳定的 AI 大模型 API 中转站，基于统一的 OpenAI API 标准，支持 200+ 热门 AI 模型。一个令牌，即可轻松调用 OpenAI、Claude、Gemini、DeepSeek、Qwen、Kimi、GLM 等所有主流大模型。
 
 ## 📖 产品基础
 
@@ -73,7 +73,7 @@ description: "企业级专业稳定的AI大模型API中转站，支持200+热门
   </Card>
 </Columns>
 
-## 🚀 为什么选择 Nebula Lab？
+## 🚀 为什么选择 Nebula Api？
 
 ### 一个接口，多种模型
 
@@ -125,7 +125,7 @@ response = client.chat.completions.create(
 
 <Steps>
   <Step title="注册账号">
-    访问 [Nebula Lab](https://ai-nebula.com) 创建您的账号
+    访问 [Nebula Api](https://ai-nebula.com) 创建您的账号
   </Step>
   <Step title="获取密钥">
     在控制台生成您的 API 密钥
