--- a/cn/contact.mdx
+++ b/cn/contact.mdx
@@ -10,7 +10,7 @@ description: '获取 Nebula Api 技术支持和商务合作'
     扫描下方二维码添加微信客服
     
     <Frame>
-      <img src="/images/wechat-qr.png" alt="微信客服二维码" width="200" />
+      <img src="/images/zhenshangWxCode.png" alt="微信客服二维码" width="220" />
     </Frame>
   </Card>
   <Card title="邮件支持" icon="envelope" href="mailto:mla@nebula-data.com">
