--- a/en/changelog.mdx
+++ b/en/changelog.mdx
@@ -12,6 +12,9 @@ Welcome to Nebula Api changelog. Here you can find our latest model releases, pr
 ## 🔥 Latest Updates
 
 <CardGroup cols={1}>
+  <Card title="12/12 GPT-5.2 Series" icon="rocket">
+    OpenAI's newest flagship iteration! Better reasoning and coding, same price as GPT-5.1; GDPval real-world tasks: 70.9% on par with 14-year experts; ARC-AGI 2: 52.9%.
+  </Card>
   <Card title="12/04 SeeDream 4.5" icon="image">
     BytePlus best 4K image generation model! 1.2B parameters, enhanced text rendering, supports 10 reference images, $0.035/image!
   </Card>
@@ -27,6 +30,19 @@ Welcome to Nebula Api changelog. Here you can find our latest model releases, pr
 </CardGroup>
 
 ## 📅 December 2025
+
+### 🚀 GPT-5.2 Series Released (12/12)
+
+OpenAI's year-end upgrade for Chat, Reasoning, and Code:
+
+- **Performance**: Improved reasoning chain; more stable code/tool calls; better SWE-bench than 5.1
+- **Pricing**: Same as GPT-5.1, keeping strong value
+- **Compatibility**: Streaming, tool calling, and thinking/reasoning remain backward-compatible
+- **Productivity focus**: Targeted at spreadsheets, decks, long docs, and coding; positioned as a "brainwork partner"
+- **GDPval benchmark**: Across 44 professions and 1,320 real tasks, GPT-5.2 matches or beats 14-year experts in 70.9% of cases
+- **ARC-AGI 2 leap**: Thinking version scores 52.9% (up from 17.6%), notably ahead of Gemini 3 Pro / Claude peers
+- **Single mega-agent**: Lower tool-call latency, smoother multi-tool orchestration
+- **Vision + long context**: Industrial-grade vision (e.g., circuit boards, wave simulations) with ultra-long context for multi-file and long-doc analysis
 
 ### 🎨 SeeDream 4.5 Released
 
@@ -161,4 +177,10 @@ OpenAI's first open source models!
 
 **Tip**: New models often have special launch promotions. Try them early!
 </Note>
+
+## 📞 Contact Support
+
+Scan the QR code below to add WeChat support:
+
+<Image src="/images/zhenshangWxCode.png" alt="WeChat support QR" width="260" />
 
