--- a/en/contact.mdx
+++ b/en/contact.mdx
@@ -10,7 +10,7 @@ description: 'Get Nebula Api technical support and business inquiries'
     Scan QR code to add WeChat support
     
     <Frame>
-      <img src="/images/wechat-qr.png" alt="WeChat QR Code" width="200" />
+      <img src="/images/zhenshangWxCode.png" alt="WeChat QR Code" width="220" />
     </Frame>
   </Card>
   <Card title="Email Support" icon="envelope" href="mailto:mla@nebula-data.com">
