--- a/cn/changelog.mdx
+++ b/cn/changelog.mdx
@@ -152,11 +152,14 @@ OpenAI 首次开源大模型！
 ## 📊 更新统计
 
 <AccordionGroup>
+  <Accordion title="2025年12月亮点">
+    - 🚀 GPT-5.2：GDPval 70.9% 追平/超越 14 年专家，ARC-AGI 2 52.9%，推理/代码/办公场景全面升级
+    - 🎨 SeeDream 4.5：4K 图像生成，文本渲染增强，$0.035/张
+  </Accordion>
   <Accordion title="2025年11月亮点">
     - 🚀 Claude Opus 4.5：SWE-bench 80.9%，世界最强编程模型
     - 🌟 Gemini 3 Pro Preview：LMArena 1501 Elo 全球第一
-    - 🚀 GPT-5.1 全系列：智能与速度完美平衡
-    - 🎨 SeeDream 4.5：4K 图像生成，$0.035/张
+    - 🚀 GPT-5.1 全系列：智能与速度平衡
   </Accordion>
   <Accordion title="2025年10月亮点">
     - ⚡ Claude Haiku 4.5：高性价比编码模型
@@ -177,10 +180,4 @@ OpenAI 首次开源大模型！
 
 **小贴士**：新模型上线初期通常会有特别优惠，建议及时试用体验。
 </Note>
-
-## 📞 联系客服
-
-扫描下方二维码添加微信客服：
-
-<Image src="/images/zhenshangWxCode.png" alt="微信客服二维码" width="260" />
 
