--- a/cn/quickstart.mdx
+++ b/cn/quickstart.mdx
@@ -8,28 +8,26 @@ description: '只需简单三步，即可开始使用 Nebula Api 访问各种 AI
 ### 1.1 注册账号
 
 访问 [Nebula Api 官网](https://ai-nebula.com) 注册账号：
-- 使用邮箱注册
-- 验证邮箱地址
+- 使用手机号注册并完成验证
 - 登录控制台
 
 ### 1.2 账户充值
 
 在控制台进行充值：
-1. 点击"充值"菜单
-2. 选择充值金额
-3. 完成支付（支持支付宝、微信）
+1. 点击「个人中心」
+2. 点击「费用充值」，完成支付（支持支付宝、微信）
 
 <Note>
-新用户首次充值可获得额外赠送，充值后余额立即到账
+新用户注册额外赠送 1 美金
 </Note>
 
 ## 第二步：创建 API 密钥
 
 ### 2.1 生成密钥
 
-1. 在后台导航点击"令牌"栏目
-2. 可以复制【默认令牌】直接使用
-3. 或者点击"新增"按钮创建新令牌
+1. 在后台导航点击「模型中心」
+2. 点击「API 密钥」
+3. 点击「新建」生成密钥
 
 <Warning>
 保存好您的 API 密钥，密钥只会显示一次
