--- a/en/changelog.mdx
+++ b/en/changelog.mdx
@@ -152,6 +152,10 @@ OpenAI's first open source models!
 ## 📊 Update Statistics
 
 <AccordionGroup>
+  <Accordion title="December 2025 Highlights">
+    - 🚀 GPT-5.2: GDPval 70.9% matches/beats 14-year experts; ARC-AGI 2 at 52.9%; major gains in reasoning/coding/office workflows
+    - 🎨 SeeDream 4.5: 4K image generation, better text rendering, $0.035/image
+  </Accordion>
   <Accordion title="November 2025 Highlights">
     - 🚀 Claude Opus 4.5: SWE-bench 80.9%, world's best coding model
     - 🌟 Gemini 3 Pro Preview: LMArena 1501 Elo #1 globally
@@ -177,10 +181,4 @@ OpenAI's first open source models!
 
 **Tip**: New models often have special launch promotions. Try them early!
 </Note>
-
-## 📞 Contact Support
-
-Scan the QR code below to add WeChat support:
-
-<Image src="/images/zhenshangWxCode.png" alt="WeChat support QR" width="260" />
 
