--- a/en/quickstart.mdx
+++ b/en/quickstart.mdx
@@ -8,28 +8,26 @@ description: 'Get started with Nebula Api in just three simple steps'
 ### 1.1 Register
 
 Visit [Nebula Api](https://ai-nebula.com) to register:
-- Sign up with email
-- Verify your email address
+- Sign up with your mobile number and verify
 - Log in to the console
 
 ### 1.2 Add Credits
 
 Top up in the console:
-1. Click "Recharge" menu
-2. Select amount
-3. Complete payment (Alipay, WeChat supported)
+1. Click "Personal Center"
+2. Click "Billing Recharge" to pay (Alipay, WeChat supported)
 
 <Note>
-New users get bonus credits on first top-up
+New users receive a $1 bonus upon registration
 </Note>
 
 ## Step 2: Create API Key
 
 ### 2.1 Generate Key
 
-1. Click "Tokens" in the navigation
-2. Copy the default token to use directly
-3. Or click "Add" to create a new token
+1. Click "Model Center" in the navigation
+2. Click "API Keys"
+3. Click "Create New" to generate a key
 
 <Warning>
 Save your API key safely - it will only be shown once
